--- a/menu.html
+++ b/menu.html
@@ -70,7 +70,7 @@
           <h1 class="mb-3 mt-5 bread">Our Products</h1>
           <p class="breadcrumbs">
             <span class="mr-2"><a href="index.html">Home</a></span> 
-            <span>Menu</span>
+            <span>Products</span>
           </p>
         </div>
       </div>
