--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       
       <div class="col-lg-4 d-flex ftco-animate">
         <div class="services-wrap d-flex">
-          <a href="#" class="img" style="background-image: url(images/pizza-1.jpg);"></a>
+          <a href="#" class="img" style="background-image: url(images/suct.jpg);"></a>
           <div class="text p-4">
             <h3>Suction Guide Strainers</h3>
             <p>Engineered to protect pumps and systems by filtering debris with precision, ensuring efficient flow and lasting reliability in every application.</p>
@@ -311,7 +311,7 @@
 
       <div class="col-lg-4 d-flex ftco-animate">
         <div class="services-wrap d-flex">
-          <a href="#" class="img" style="background-image: url(images/pizza-2.jpg);"></a>
+          <a href="#" class="img" style="background-image: url(images/ytype.jpg);"></a>
           <div class="text p-4">
             <h3>Y-Type Strainers</h3>
             <p>Compact and durable, ideal for pipeline protection in demanding environments, effectively removing unwanted particles from fluid systems.</p>
@@ -322,7 +322,7 @@
 
       <div class="col-lg-4 d-flex ftco-animate">
         <div class="services-wrap d-flex">
-          <a href="#" class="img" style="background-image: url(images/pizza-3.jpg);"></a>
+          <a href="#" class="img" style="background-image: url(images/balance.webp);"></a>
           <div class="text p-4">
             <h3>Balancing Valves</h3>
             <p>Designed to maintain accurate flow control in complex systems, ensuring performance optimization and energy efficiency across all operations.</p>
@@ -333,7 +333,7 @@
 
       <div class="col-lg-4 d-flex ftco-animate">
         <div class="services-wrap d-flex">
-          <a href="#" class="img order-lg-last" style="background-image: url(images/pizza-4.jpg);"></a>
+          <a href="#" class="img order-lg-last" style="background-image: url(images/tank.jpg);"></a>
           <div class="text p-4">
             <h3>Expansion Tanks</h3>
             <p>Built for pressure stability and system safety, these tanks manage expansion and contraction in heating and cooling applications efficiently.</p>
@@ -344,7 +344,7 @@
 
       <div class="col-lg-4 d-flex ftco-animate">
         <div class="services-wrap d-flex">
-          <a href="#" class="img order-lg-last" style="background-image: url(images/pizza-5.jpg);"></a>
+          <a href="#" class="img order-lg-last" style="background-image: url(images/iv.jpg);"></a>
           <div class="text p-4">
             <h3>Butterfly Valves</h3>
             <p>Compact, efficient, and easy to operate — perfect for regulating flow in pipelines handling water, oil, gas, and chemical media.</p>
@@ -355,7 +355,7 @@
 
       <div class="col-lg-4 d-flex ftco-animate">
         <div class="services-wrap d-flex">
-          <a href="#" class="img order-lg-last" style="background-image: url(images/pizza-6.jpg);"></a>
+          <a href="#" class="img order-lg-last" style="background-image: url(images/he.webp);"></a>
           <div class="text p-4">
             <h3>Foot Valves</h3>
             <p>Reliable non-return valves that maintain prime and prevent backflow, ensuring efficient pump operation and reduced maintenance needs.</p>
@@ -390,7 +390,7 @@
       </div>
 
       <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/homebg.jpg);"></div>
+        <div class="img" style="background-image: url(images/o1.jpg);"></div>
         <div class="desc pl-3">
           <div class="d-flex text align-items-center">
             <h3><span>Trusted Quality Assurance</span></h3>
@@ -402,7 +402,7 @@
       </div>
 
       <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/pizza-3.jpg);"></div>
+        <div class="img" style="background-image: url(images/o2.jpg);"></div>
         <div class="desc pl-3">
           <div class="d-flex text align-items-center">
             <h3><span>Innovative Design</span></h3>
@@ -414,7 +414,7 @@
       </div>
 
       <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/pizza-4.jpg);"></div>
+        <div class="img" style="background-image: url(images/o3.jpg);"></div>
         <div class="desc pl-3">
           <div class="d-flex text align-items-center">
             <h3><span>Customized Solutions</span></h3>
@@ -428,7 +428,7 @@
 
     <div class="col-md-6">
       <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/pizza-5.jpg);"></div>
+        <div class="img" style="background-image: url(images/o4.jpg);"></div>
         <div class="desc pl-3">
           <div class="d-flex text align-items-center">
             <h3><span>Industry Expertise</span></h3>
@@ -440,7 +440,7 @@
       </div>
 
       <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/pizza-6.jpg);"></div>
+        <div class="img" style="background-image: url(images/o5.jpg);"></div>
         <div class="desc pl-3">
           <div class="d-flex text align-items-center">
             <h3><span>Reliable Performance</span></h3>
@@ -452,7 +452,7 @@
       </div>
 
       <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/pizza-7.jpg);"></div>
+        <div class="img" style="background-image: url(images/o6.jpg);"></div>
         <div class="desc pl-3">
           <div class="d-flex text align-items-center">
             <h3><span>Global Reach</span></h3>
@@ -464,7 +464,7 @@
       </div>
 
       <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/pizza-8.jpg);"></div>
+        <div class="img" style="background-image: url(images/o7.jpg);"></div>
         <div class="desc pl-3">
           <div class="d-flex text align-items-center">
             <h3><span>After-Sales Support</span></h3>
@@ -484,28 +484,28 @@
     	<div class="container-wrap">
     		<div class="row no-gutters">
 					<div class="col-md-3 ftco-animate">
-						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-1.jpg);">
+						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/o1.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-search"></span>
     					</div>
 						</a>
 					</div>
 					<div class="col-md-3 ftco-animate">
-						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-2.jpg);">
+						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/o2.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-search"></span>
     					</div>
 						</a>
 					</div>
 					<div class="col-md-3 ftco-animate">
-						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-3.jpg);">
+						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/o3.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-search"></span>
     					</div>
 						</a>
 					</div>
 					<div class="col-md-3 ftco-animate">
-						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-4.jpg);">
+						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/o4.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-search"></span>
     					</div>
@@ -516,7 +516,7 @@
     </section>
 
 
-		<section class="ftco-counter ftco-bg-dark img" id="section-counter" style="background-image: url(images/bg_2.jpg);" data-stellar-background-ratio="0.5">
+		<section class="ftco-counter ftco-bg-dark img" id="section-counter" style="background-image: url(images/homebg.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
       <div class="container">
         <div class="row justify-content-center">
@@ -525,36 +525,36 @@
 		          <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		              	<div class="icon"><span class="flaticon-pizza-1"></span></div>
-		              	<strong class="number" data-number="100">0</strong>
-		              	<span>Pizza Branches</span>
+		              	<!-- <div class="icon"><span class="flaticon-pizza-1"></span></div> -->
+		              	<!-- <strong class="number" data-number="100">0</strong> -->
+		              	<!-- <span>Pizza Branches</span> -->
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		              	<div class="icon"><span class="flaticon-medal"></span></div>
-		              	<strong class="number" data-number="85">0</strong>
-		              	<span>Number of Awards</span>
+		              	<!-- <div class="icon"><span class="flaticon-medal"></span></div> -->
+		              	<!-- <strong class="number" data-number="85">0</strong> -->
+		              	<!-- <span>Number of Awards</span> -->
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		              	<div class="icon"><span class="flaticon-laugh"></span></div>
-		              	<strong class="number" data-number="10567">0</strong>
-		              	<span>Happy Customer</span>
+		              	<!-- <div class="icon"><span class="flaticon-laugh"></span></div> -->
+		              	<!-- <strong class="number" data-number="10567">0</strong> -->
+		              	<!-- <span>Happy Customer</span> -->
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		              	<div class="icon"><span class="flaticon-chef"></span></div>
-		              	<strong class="number" data-number="900">0</strong>
-		              	<span>Staff</span>
+		              	<!-- <div class="icon"><span class="flaticon-chef"></span></div> -->
+		              	<!-- <strong class="number" data-number="900">0</strong> -->
+		              	<!-- <span>Staff</span> -->
 		              </div>
 		            </div>
 		          </div>
