Files related to services

--- a/services.html
+++ b/services.html
@@ -52,17 +52,11 @@
 	  </nav>
     <!-- END nav -->
 
-    <section class="home-slider owl-carousel img">
-  <div class="slider-item">
-    <!-- Video Background -->
-    <video autoplay muted loop playsinline class="slider-video">
-      <source src="images/Services.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-
+  <section class="home-slider owl-carousel img">
+  <div class="slider-item" style="background-image: url('images/sub.jpg');">
     <!-- Overlay -->
     <div class="overlay"></div>
-
+  
     <!-- Content -->
     <div class="container">
       <div class="row slider-text justify-content-center align-items-center">
@@ -77,6 +71,7 @@
     </div>
   </div>
 </section>
+
 
 
    <section class="ftco-section ftco-services">
@@ -172,259 +167,6 @@
     </div>
   </div>
 </section>
-
-    <!-- <section class="ftco-section">
-    	<div class="container">
-    <div class="row justify-content-center mb-5 pb-3">
-      <div class="col-md-7 heading-section ftco-animate text-center">
-        <h2 class="mb-4">Our Products</h2>
-        <p>At Tigsco, we design and deliver precision-engineered Strainers and Valves that ensure seamless and efficient pipeline performance across industries.</p>
-      </div>
-    </div>
-  </div>
-  <div class="container-wrap">
-    <div class="row no-gutters d-flex">
-      
-      <div class="col-lg-4 d-flex ftco-animate">
-        <div class="services-wrap d-flex">
-          <a href="#" class="img" style="background-image: url(images/suct.jpg);"></a>
-          <div class="text p-4">
-            <h3>Suction Guide Strainers</h3>
-            <p>Engineered to protect pumps and systems by filtering debris with precision, ensuring efficient flow and lasting reliability in every application.</p>
-            <p class="price"><a href="#" class="ml-2 btn btn-white btn-outline-white">Know More</a></p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 d-flex ftco-animate">
-        <div class="services-wrap d-flex">
-          <a href="#" class="img" style="background-image: url(images/ytype.jpg);"></a>
-          <div class="text p-4">
-            <h3>Y-Type Strainers</h3>
-            <p>Compact and durable, ideal for pipeline protection in demanding environments, effectively removing unwanted particles from fluid systems.</p>
-            <p class="price"><a href="#" class="ml-2 btn btn-white btn-outline-white">Know More</a></p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 d-flex ftco-animate">
-        <div class="services-wrap d-flex">
-          <a href="#" class="img" style="background-image: url(images/balance.webp);"></a>
-          <div class="text p-4">
-            <h3>Balancing Valves</h3>
-            <p>Designed to maintain accurate flow control in complex systems, ensuring performance optimization and energy efficiency across all operations.</p>
-            <p class="price"><a href="#" class="ml-2 btn btn-white btn-outline-white">Know More</a></p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 d-flex ftco-animate">
-        <div class="services-wrap d-flex">
-          <a href="#" class="img order-lg-last" style="background-image: url(images/tank.jpg);"></a>
-          <div class="text p-4">
-            <h3>Expansion Tanks</h3>
-            <p>Built for pressure stability and system safety, these tanks manage expansion and contraction in heating and cooling applications efficiently.</p>
-            <p class="price"><a href="#" class="ml-2 btn btn-white btn-outline-white">Know More</a></p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 d-flex ftco-animate">
-        <div class="services-wrap d-flex">
-          <a href="#" class="img order-lg-last" style="background-image: url(images/iv.jpg);"></a>
-          <div class="text p-4">
-            <h3>Butterfly Valves</h3>
-            <p>Compact, efficient, and easy to operate — perfect for regulating flow in pipelines handling water, oil, gas, and chemical media.</p>
-            <p class="price"><a href="#" class="ml-2 btn btn-white btn-outline-white">Know More</a></p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 d-flex ftco-animate">
-        <div class="services-wrap d-flex">
-          <a href="#" class="img order-lg-last" style="background-image: url(images/he.webp);"></a>
-          <div class="text p-4">
-            <h3>Foot Valves</h3>
-            <p>Reliable non-return valves that maintain prime and prevent backflow, ensuring efficient pump operation and reduced maintenance needs.</p>
-            <p class="price"><a href="#" class="ml-2 btn btn-white btn-outline-white">Know More</a></p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-    	<div class="container">
-  <div class="row justify-content-center mb-5 pb-3 mt-5 pt-5">
-    <div class="col-md-7 heading-section text-center ftco-animate">
-      <h2 class="mb-4">Why Choose Us</h2>
-      <p class="flip"><span class="deg1"></span><span class="deg2"></span><span class="deg3"></span></p>
-      <p class="mt-5">With decades of engineering excellence, Tigsco delivers precision, reliability, and performance in every product we create.</p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-6">
-      <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/homebg.jpg);"></div>
-        <div class="desc pl-3">
-          <div class="d-flex text align-items-center">
-            <h3><span>Precision Engineering</span></h3>
-          </div>
-          <div class="d-block">
-            <p>Every Tigsco product is crafted with exacting standards, ensuring consistent quality and dependable performance in all environments.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/o1.jpg);"></div>
-        <div class="desc pl-3">
-          <div class="d-flex text align-items-center">
-            <h3><span>Trusted Quality Assurance</span></h3>
-          </div>
-          <div class="d-block">
-            <p>Our products undergo rigorous testing and inspection, meeting international standards for safety, precision, and long-term performance.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/o2.jpg);"></div>
-        <div class="desc pl-3">
-          <div class="d-flex text align-items-center">
-            <h3><span>Innovative Design</span></h3>
-          </div>
-          <div class="d-block">
-            <p>We combine modern technology with field experience to design efficient strainers and valves that solve real industrial challenges.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/o3.jpg);"></div>
-        <div class="desc pl-3">
-          <div class="d-flex text align-items-center">
-            <h3><span>Customized Solutions</span></h3>
-          </div>
-          <div class="d-block">
-            <p>From small systems to large plants, we tailor products to meet unique industrial requirements with precision and flexibility.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-6">
-      <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/o4.jpg);"></div>
-        <div class="desc pl-3">
-          <div class="d-flex text align-items-center">
-            <h3><span>Industry Expertise</span></h3>
-          </div>
-          <div class="d-block">
-            <p>With deep knowledge across sectors like water, oil, and chemicals, Tigsco understands every flow and every challenge engineers face.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/o5.jpg);"></div>
-        <div class="desc pl-3">
-          <div class="d-flex text align-items-center">
-            <h3><span>Reliable Performance</span></h3>
-          </div>
-          <div class="d-block">
-            <p>Built to last and perform, our valves and strainers ensure uninterrupted operation and protection for critical industrial systems.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/o6.jpg);"></div>
-        <div class="desc pl-3">
-          <div class="d-flex text align-items-center">
-            <h3><span>Global Reach</span></h3>
-          </div>
-          <div class="d-block">
-            <p>Serving clients across industries and continents, Tigsco products are trusted worldwide for their consistency and performance.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="pricing-entry d-flex ftco-animate">
-        <div class="img" style="background-image: url(images/o7.jpg);"></div>
-        <div class="desc pl-3">
-          <div class="d-flex text align-items-center">
-            <h3><span>After-Sales Support</span></h3>
-          </div>
-          <div class="d-block">
-            <p>We don’t just deliver products; we provide guidance, maintenance, and lifelong support to ensure smooth and efficient operations.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-    </section> -->
-
-    <!-- <section class="ftco-section">
-    	<div class="container">
-    		<div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 heading-section ftco-animate text-center">
-            <h2 class="mb-4">Hot Meals</h2>
-            <p class="flip"><span class="deg1"></span><span class="deg2"></span><span class="deg3"></span></p>
-            <p class="mt-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-          </div>
-        </div>
-    		<div class="row">
-    			<div class="col-md-3 text-center ftco-animate">
-      			<div class="menu-wrap">
-      				<a href="#" class="menu-img img mb-4" style="background-image: url(images/pizza-1.jpg);"></a>
-      				<div class="text">
-      					<h3><a href="#">Itallian Pizza</a></h3>
-      					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-      					<p class="price"><span>$2.90</span></p>
-      					<p><a href="#" class="btn btn-white btn-outline-white">Add to cart</a></p>
-      				</div>
-      			</div>
-      		</div>
-      		<div class="col-md-3 text-center ftco-animate">
-      			<div class="menu-wrap">
-      				<a href="#" class="menu-img img mb-4" style="background-image: url(images/pizza-2.jpg);"></a>
-      				<div class="text">
-      					<h3><a href="#">Itallian Pizza</a></h3>
-      					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-      					<p class="price"><span>$2.90</span></p>
-      					<p><a href="#" class="btn btn-white btn-outline-white">Add to cart</a></p>
-      				</div>
-      			</div>
-      		</div>
-      		<div class="col-md-3 text-center ftco-animate">
-      			<div class="menu-wrap">
-      				<a href="#" class="menu-img img mb-4" style="background-image: url(images/pizza-3.jpg);"></a>
-      				<div class="text">
-      					<h3><a href="#">Itallian Pizza</a></h3>
-      					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-      					<p class="price"><span>$2.90</span></p>
-      					<p><a href="#" class="btn btn-white btn-outline-white">Add to cart</a></p>
-      				</div>
-      			</div>
-      		</div>
-      		<div class="col-md-3 text-center ftco-animate">
-      			<div class="menu-wrap">
-      				<a href="#" class="menu-img img mb-4" style="background-image: url(images/pizza-4.jpg);"></a>
-      				<div class="text">
-      					<h3><a href="#">Itallian Pizza</a></h3>
-      					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-      					<p class="price"><span>$2.90</span></p>
-      					<p><a href="#" class="btn btn-white btn-outline-white">Add to cart</a></p>
-      				</div>
-      			</div>
-      		</div>
-    		</div>
-    	</div>
-    </section> -->
-
      <footer class="ftco-footer ftco-section img">
   <div class="overlay"></div>
   <div class="container">
