--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <title>Tigsco</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	    <link rel="icon" type="image/png" href="images/TigscoLogo (3).png">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
@@ -52,22 +54,16 @@
 	  </nav>
     <!-- END nav -->
 
-    <section class="home-slider owl-carousel img">
-  <div class="slider-item">
-    <!-- Video Background -->
-    <video autoplay muted loop playsinline class="slider-video">
-      <source src="images/About.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-
+   <section class="home-slider owl-carousel img">
+  <div class="slider-item" style="background-image: url('images/circle.jpg');">
     <!-- Overlay -->
     <div class="overlay"></div>
-
+  
     <!-- Content -->
     <div class="container">
       <div class="row slider-text justify-content-center align-items-center">
         <div class="col-md-7 col-sm-12 text-center ftco-animate">
-          <h1 class="mb-3 mt-5 bread">Our Products</h1>
+          <h1 class="mb-3 mt-5 bread">About Us</h1>
           <p class="breadcrumbs">
             <span class="mr-2"><a href="index.html">Home</a></span> 
             <span>About</span>
@@ -76,8 +72,7 @@
       </div>
     </div>
   </div>
-</section>
-    
+</section> 
 
     <section class="ftco-intro">
     	<div class="container-wrap">
