--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,9 @@
   <head>
     <title>Tigsco</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">\\
+    
+    <link rel="icon" type="image/png" href="images/TigscoLogo (3).png">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
@@ -52,22 +54,16 @@
 	  </nav>
     <!-- END nav -->
 
-   <section class="home-slider owl-carousel img">
-  <div class="slider-item">
-    <!-- Video Background -->
-    <video autoplay muted loop playsinline class="slider-video">
-      <source src="images/Contact.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-
+  <section class="home-slider owl-carousel img">
+  <div class="slider-item" style="background-image: url('images/chim.jpg');">
     <!-- Overlay -->
     <div class="overlay"></div>
-
+  
     <!-- Content -->
     <div class="container">
       <div class="row slider-text justify-content-center align-items-center">
         <div class="col-md-7 col-sm-12 text-center ftco-animate">
-          <h1 class="mb-3 mt-5 bread">Contact</h1>
+          <h1 class="mb-3 mt-5 bread">Contact Us</h1>
           <p class="breadcrumbs">
             <span class="mr-2"><a href="index.html">Home</a></span> 
             <span>Contact</span>
@@ -77,7 +73,6 @@
     </div>
   </div>
 </section>
-
     <section class="ftco-section contact-section">
       <div class="container mt-5">
         <div class="row block-9">
