--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,8 @@
     <title>Our Product</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <link rel="icon" type="image/png" href="images/TigscoLogo (3).png">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
@@ -52,17 +54,11 @@
 
     <!-- END nav -->
 
-    <section class="home-slider owl-carousel img">
-  <div class="slider-item">
-    <!-- Video Background -->
-    <video autoplay muted loop playsinline class="slider-video">
-      <source src="images/productBG.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-
+   <section class="home-slider owl-carousel img">
+  <div class="slider-item" style="background-image: url('images/indust.jpg');">
     <!-- Overlay -->
     <div class="overlay"></div>
-
+  
     <!-- Content -->
     <div class="container">
       <div class="row slider-text justify-content-center align-items-center">
@@ -77,7 +73,6 @@
     </div>
   </div>
 </section>
-
     
 	<section class="ftco-section">
   <div class="container">
